// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sortable tableComponent can sort the data with by a specific column 1`] = `
"
            <div id=\\"app\\"><div><div class=\\"table-component\\"><div class=\\"table-component__filter\\"><input type=\\"text\\" name=\\"table-component-filter\\" placeholder=\\"Filter table…\\" class=\\"table-component__filter__field\\"> <!----></div> <div class=\\"table-component__table-wrapper\\"><table class=\\"table-component__table\\"><thead><tr><th class=\\"table-component__th--sort-\\">
    First name
</th><th class=\\"table-component__th--sort\\">
    Last name
</th><th>
    Color
</th></tr></thead> <tbody><tr><td>Ringo</td><td>Starr</td><td>Yellow</td></tr><tr><td>John</td><td>Lennon</td><td>Red</td></tr><tr><td>George</td><td>Harrison</td><td>Green</td></tr><tr><td>Paul</td><td>McCartney</td><td>Blue</td></tr></tbody></table></div> <!----> <div style=\\"display: none;\\"><th>
    First name
</th> <th>
    Last name
</th> <th>
    Color
</th></div></div></div></div>
        "
`;

exports[`Sortable tableComponent can sort the data with by a specific column in a specific order 1`] = `
"
            <div id=\\"app\\"><div><div class=\\"table-component\\"><div class=\\"table-component__filter\\"><input type=\\"text\\" name=\\"table-component-filter\\" placeholder=\\"Filter table…\\" class=\\"table-component__filter__field\\"> <!----></div> <div class=\\"table-component__table-wrapper\\"><table class=\\"table-component__table\\"><thead><tr><th class=\\"table-component__th--sort-desc\\">
    First name
</th><th class=\\"table-component__th--sort\\">
    Last name
</th><th>
    Color
</th></tr></thead> <tbody><tr><td>Paul</td><td>McCartney</td><td>Blue</td></tr><tr><td>George</td><td>Harrison</td><td>Green</td></tr><tr><td>John</td><td>Lennon</td><td>Red</td></tr><tr><td>Ringo</td><td>Starr</td><td>Yellow</td></tr></tbody></table></div> <!----> <div style=\\"display: none;\\"><th>
    First name
</th> <th>
    Last name
</th> <th>
    Color
</th></div></div></div></div>
        "
`;

exports[`Sortable tableComponent can sort the data with by another specific column 1`] = `
"
            <div id=\\"app\\"><div><div class=\\"table-component\\"><div class=\\"table-component__filter\\"><input type=\\"text\\" name=\\"table-component-filter\\" placeholder=\\"Filter table…\\" class=\\"table-component__filter__field\\"> <!----></div> <div class=\\"table-component__table-wrapper\\"><table class=\\"table-component__table\\"><thead><tr><th class=\\"table-component__th--sort\\">
    First name
</th><th class=\\"table-component__th--sort-\\">
    Last name
</th><th>
    Color
</th></tr></thead> <tbody><tr><td>Paul</td><td>McCartney</td><td>Blue</td></tr><tr><td>Ringo</td><td>Starr</td><td>Yellow</td></tr><tr><td>George</td><td>Harrison</td><td>Green</td></tr><tr><td>John</td><td>Lennon</td><td>Red</td></tr></tbody></table></div> <!----> <div style=\\"display: none;\\"><th>
    First name
</th> <th>
    Last name
</th> <th>
    Color
</th></div></div></div></div>
        "
`;

exports[`Sortable tableComponent it will change the sort order when clicking the header of the column with the active sort 1`] = `
"
            <div id=\\"app\\"><div><div class=\\"table-component\\"><div class=\\"table-component__filter\\"><input type=\\"text\\" name=\\"table-component-filter\\" placeholder=\\"Filter table…\\" class=\\"table-component__filter__field\\"> <!----></div> <div class=\\"table-component__table-wrapper\\"><table class=\\"table-component__table\\"><thead><tr><th class=\\"table-component__th--sort-desc\\">
    First name
</th><th class=\\"table-component__th--sort\\">
    Last name
</th><th>
    Color
</th></tr></thead> <tbody><tr><td>Paul</td><td>McCartney</td><td>Blue</td></tr><tr><td>George</td><td>Harrison</td><td>Green</td></tr><tr><td>John</td><td>Lennon</td><td>Red</td></tr><tr><td>Ringo</td><td>Starr</td><td>Yellow</td></tr></tbody></table></div> <!----> <div style=\\"display: none;\\"><th>
    First name
</th> <th>
    Last name
</th> <th>
    Color
</th></div></div></div></div>
        "
`;

exports[`Sortable tableComponent will not sort data when clicking a non-sortable column header 1`] = `
"
            <div id=\\"app\\"><div><div class=\\"table-component\\"><div class=\\"table-component__filter\\"><input type=\\"text\\" name=\\"table-component-filter\\" placeholder=\\"Filter table…\\" class=\\"table-component__filter__field\\"> <!----></div> <div class=\\"table-component__table-wrapper\\"><table class=\\"table-component__table\\"><thead><tr><th class=\\"table-component__th--sort-\\">
    First name
</th><th class=\\"table-component__th--sort\\">
    Last name
</th><th>
    Color
</th></tr></thead> <tbody><tr><td>Ringo</td><td>Starr</td><td>Yellow</td></tr><tr><td>John</td><td>Lennon</td><td>Red</td></tr><tr><td>George</td><td>Harrison</td><td>Green</td></tr><tr><td>Paul</td><td>McCartney</td><td>Blue</td></tr></tbody></table></div> <!----> <div style=\\"display: none;\\"><th>
    First name
</th> <th>
    Last name
</th> <th>
    Color
</th></div></div></div></div>
        "
`;

exports[`Sortable tableComponent will not sort on a column that is not sortable 1`] = `
"
            <div id=\\"app\\"><div><div class=\\"table-component\\"><div class=\\"table-component__filter\\"><input type=\\"text\\" name=\\"table-component-filter\\" placeholder=\\"Filter table…\\" class=\\"table-component__filter__field\\"> <!----></div> <div class=\\"table-component__table-wrapper\\"><table class=\\"table-component__table\\"><thead><tr><th class=\\"table-component__th--sort\\">
    First name
</th><th class=\\"table-component__th--sort\\">
    Last name
</th><th>
    Color
</th></tr></thead> <tbody><tr><td>Ringo</td><td>Starr</td><td>Yellow</td></tr><tr><td>John</td><td>Lennon</td><td>Red</td></tr><tr><td>George</td><td>Harrison</td><td>Green</td></tr><tr><td>Paul</td><td>McCartney</td><td>Blue</td></tr></tbody></table></div> <!----> <div style=\\"display: none;\\"><th>
    First name
</th> <th>
    Last name
</th> <th>
    Color
</th></div></div></div></div>
        "
`;

exports[`Sortable tableComponent will sort the data descendingly if the header of of column without the active sort is clicked 1`] = `
"
            <div id=\\"app\\"><div><div class=\\"table-component\\"><div class=\\"table-component__filter\\"><input type=\\"text\\" name=\\"table-component-filter\\" placeholder=\\"Filter table…\\" class=\\"table-component__filter__field\\"> <!----></div> <div class=\\"table-component__table-wrapper\\"><table class=\\"table-component__table\\"><thead><tr><th class=\\"table-component__th--sort\\">
    First name
</th><th class=\\"table-component__th--sort-desc\\">
    Last name
</th><th>
    Color
</th></tr></thead> <tbody><tr><td>John</td><td>Lennon</td><td>Red</td></tr><tr><td>George</td><td>Harrison</td><td>Green</td></tr><tr><td>Ringo</td><td>Starr</td><td>Yellow</td></tr><tr><td>Paul</td><td>McCartney</td><td>Blue</td></tr></tbody></table></div> <!----> <div style=\\"display: none;\\"><th>
    First name
</th> <th>
    Last name
</th> <th>
    Color
</th></div></div></div></div>
        "
`;
